language/move-lang/tests/move_check/translated_ir_tests/move/commands/unpack_wrong_type.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/translated_ir_tests/move/commands/unpack_wrong_type.move:6:9
  │
5 │     public fun destroy_t(t: T) {
  │                             - Expected: '0x8675309::Test::T'
6 │         X { b: _ } = t;
  │         ^^^^^^^^^^
  │         │
  │         Invalid deconstruction assignment
  │         Given: '0x8675309::Test::X'

